Bug 423336 - Contiguous selection tool not working on a group layers
Summary: Contiguous selection tool not working on a group layers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 4.3.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-06-21 22:43 UTC by michoss9
Modified: 2020-07-15 09:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description michoss9 2020-06-21 22:43:47 UTC
SUMMARY
Contiguous selection tool does not seem to work when you have a group layer active.

STEPS TO REPRODUCE
1. Create a group layer with one or more paint layers in it
2. Switch to the group layer
3. Select the Contiguous Selection Tool
4. Click on any area of the picture

OBSERVED RESULT
No selection is made, whatsoever

EXPECTED RESULT
An area of the picture should be selected.

SOFTWARE/OS VERSIONS
Windows 10

ADDITIONAL INFORMATION
worked in
Comment 1 Ahab Greybeard 2020-06-22 07:01:34 UTC
I can confirm this for the 4.3.0 appimage.
It works on the 4.2.9 appimage.
Comment 2 Tiar 2020-06-23 15:31:28 UTC
Git commit 96e3af27f78e0b02341b71351b5aba19ade486a9 by Agata Cacko.
Committed on 23/06/2020 at 15:28.
Pushed by tymond into branch 'master'.

Fix contiguous selection tool working on projection

Before this commit, the tool tried to access paint device of the layer
and return if there was none (which is the case for group layers).
This commit changes it to look for projection() instead, as it was
before the color labeled layers patch.

Using the paind device seemed to cause two bugs. It wasn't working on
group layers and clicking outside of the canvas didn't deselect.
Related: bug 423237

M  +1    -1    plugins/tools/selectiontools/kis_tool_select_contiguous.cc

https://invent.kde.org/graphics/krita/commit/96e3af27f78e0b02341b71351b5aba19ade486a9
Comment 3 Tiar 2020-06-23 15:32:37 UTC
Git commit 5e750f34c36acb384d49130f7ce950fe2c3f9666 by Agata Cacko.
Committed on 23/06/2020 at 15:32.
Pushed by tymond into branch 'krita/4.3'.

Fix contiguous selection tool working on projection

Before this commit, the tool tried to access paint device of the layer
and return if there was none (which is the case for group layers).
This commit changes it to look for projection() instead, as it was
before the color labeled layers patch.

Using the paind device seemed to cause two bugs. It wasn't working on
group layers and clicking outside of the canvas didn't deselect.
Related: bug 423237


(cherry picked from commit 96e3af27f78e0b02341b71351b5aba19ade486a9)

M  +1    -1    plugins/tools/selectiontools/kis_tool_select_contiguous.cc

https://invent.kde.org/graphics/krita/commit/5e750f34c36acb384d49130f7ce950fe2c3f9666
Comment 4 Halla Rempt 2020-07-15 09:33:05 UTC
Git commit e5462cc3d8745ba52b39edf3115108f1d9b3c310 by Boudewijn Rempt, on behalf of Agata Cacko.
Committed on 15/07/2020 at 08:53.
Pushed by rempt into branch 'krita/4.3.0'.

Fix contiguous selection tool working on projection

Before this commit, the tool tried to access paint device of the layer
and return if there was none (which is the case for group layers).
This commit changes it to look for projection() instead, as it was
before the color labeled layers patch.

Using the paind device seemed to cause two bugs. It wasn't working on
group layers and clicking outside of the canvas didn't deselect.
Related: bug 423237


(cherry picked from commit 96e3af27f78e0b02341b71351b5aba19ade486a9)
(cherry picked from commit 5e750f34c36acb384d49130f7ce950fe2c3f9666)

M  +1    -1    plugins/tools/selectiontools/kis_tool_select_contiguous.cc

https://invent.kde.org/graphics/krita/commit/e5462cc3d8745ba52b39edf3115108f1d9b3c310